--- a/Ecommerce-backend/src/main/resources/application.properties
+++ b/Ecommerce-backend/src/main/resources/application.properties
@@ -11,8 +11,5 @@ spring.h2.console.path=/h2-console
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
-server.servlet.session.timeout=60m
-server.servlet.tracking-modes=cookie
-
-# spring.security.user.name=Ajay
-# spring.security.user.password=ajay123
+# server.servlet.session.timeout=60m
+# server.servlet.tracking-modes=cookie
